style 전체 수정, 코드 일부 수정

--- a/src/resource/scss/App.scss
+++ b/src/resource/scss/App.scss
@@ -1,5 +1,11 @@
+// mixin
+@import "../scss/mixin/media_query";
+
 //base
 @import "../scss/base/reset";
 
 //components
 @import "../scss/components/Navigation";
+
+//page
+@import "../scss/page/Product";
