--- a/src/resource/scss/base/_reset.scss
+++ b/src/resource/scss/base/_reset.scss
@@ -7,12 +7,12 @@
   padding: 0;
 }
 
+html,
 body {
-  font-size: 1rem;
-  font-weight: 400;
-  letter-spacing: 0.025em;
-  line-height: 2.1428;
+  overflow-x: hidden;
+  line-height: 140%;
   font-family: "Pretendard", sans-serif;
+  color: #222;
 }
 
 ol,
@@ -24,4 +24,9 @@ a,
 a:hover,
 a:active {
   text-decoration: none;
+  color: #222;
+}
+
+button {
+  color: #222;
 }
