--- a/src/resource/scss/page/_Product.scss
+++ b/src/resource/scss/page/_Product.scss
@@ -1,108 +1,140 @@
 .product-wrap {
   .title {
-    padding: 2rem 0;
+    padding: 3rem 0 1rem;
     text-align: center;
-    color: #164129;
-    background: beige;
+    font-size: 1.8rem;
   }
+
   .container {
-    color: #164129;
-    max-width: 40rem;
-    margin: 0 auto;
+    padding: 1.4rem;
   }
 
-  .flex-wrap {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 1rem 0 2rem;
-  }
+  .search-wrap {
+    margin-bottom: 5rem;
 
-  .item-wrap {
-    border: 1px solid #eee;
-    padding: 1rem;
-    margin-bottom: 2rem;
-    box-shadow: inset 0px 0px 10px #eee;
-  }
-
-  .btn-wrap {
-    display: flex;
-    align-items: center;
-    justify-content: end;
-  }
-
-  .item {
-    padding: 0.2rem 0;
-  }
-
-  .flex {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 0 0 0.5rem;
-  }
-
-  .item-img {
-    width: 60px;
-    height: 60px;
-    border: 2px solid #eee;
-    border-radius: 100%;
-    & > img {
+    .search-form {
+      position: relative;
       width: 100%;
-      height: 100%;
-      object-fit: cover;
-      border-radius: 100%;
+
+      input[type="text"] {
+        width: 100%;
+        border: 1px solid #eee;
+        padding: 0.6rem 1rem;
+        box-shadow: 0 3px 3px #eee;
+        border-radius: 10px;
+        box-sizing: border-box;
+      }
+
+      input[type="text"] + button {
+        position: absolute;
+        top: 50%;
+        right: 0;
+        transform: translateY(-50%);
+        padding: 0.8rem;
+        border: none;
+        background-color: transparent;
+        cursor: pointer;
+      }
+    }
+
+    .btnWrap {
+      padding: 1rem 0;
+      display: flex;
+      justify-content: flex-end;
+      gap: 0.6rem;
+      .btn {
+        padding: 0.4rem;
+        font-size: 0.8rem;
+        border: none;
+        border-radius: 4px;
+        transition: background-color 0.3s ease;
+      }
     }
   }
 
-  .item-rating,
-  .btn {
-    padding: 0.2rem;
-    border: none;
-    border-radius: 4px;
-  }
-
-  .btn {
-    color: #000;
-    cursor: pointer;
-  }
-
-  .btn:not(:last-of-type) {
-    margin-right: 6px;
-  }
-
-  .item-rating {
-    padding: 0.2rem 0.6rem;
-    font-size: 14px;
-    font-weight: 600;
-    color: #fff;
-    background: #74aaff;
-  }
-
-  input[type="text"] {
+  .product-list {
     border: 1px solid #eee;
-    padding: 10px;
-    box-shadow: 0 3px 3px #eee;
-  }
+    padding: 1.2rem;
+    margin-bottom: 5rem;
+    box-shadow: inset 0px 0px 10px #eee;
 
-  form {
-    position: relative;
-  }
+    .list-visual {
+      position: relative;
+      padding-bottom: 2.2rem;
 
-  input[type="text"] + button {
-    position: absolute;
-    top: 50%;
-    right: 0;
-    transform: translateY(-50%);
-    padding: 0.6rem;
-    border: none;
-    background-color: transparent;
-    cursor: pointer;
-  }
+      .item-img {
+        position: absolute;
+        top: -100%;
+        right: 1rem;
+        width: 80px;
+        height: 80px;
+        border: 2px solid #eee;
+        border-radius: 100%;
+        background: #fff;
+        & > img {
+          width: 100%;
+          height: 100%;
+          object-fit: contain;
+          border-radius: 100%;
+        }
+      }
 
-  .price {
-    color: #d35400;
-    font-size: 14px;
-    font-weight: 600;
+      .item-rating {
+        padding: 0.4rem 0.6rem;
+        font-size: 0.8rem;
+        font-weight: 600;
+        color: #fff;
+        background: #74aaff;
+        border-radius: 4px;
+      }
+    }
+
+    .item {
+      margin-bottom: 1rem;
+    }
+    .item-title,
+    .item-description,
+    .item-price {
+      font-size: 1.1rem;
+    }
+
+    .item-price {
+      color: #666;
+      font-weight: 500;
+    }
+
+    .list-btn-wrap {
+      display: flex;
+      align-items: center;
+      justify-content: flex-end;
+
+      .btn {
+        font-size: 1rem;
+        padding: 0.3rem 0.6rem;
+        border: none;
+        border-radius: 4px;
+      }
+    }
+  }
+}
+
+@include mobile {
+  .product-wrap {
+    max-width: 500px;
+    margin: 0 auto;
+  }
+}
+@include tablet {
+  .product-wrap {
+    max-width: 600px;
+
+    .search-wrap {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      .search-form {
+        width: 50%;
+      }
+    }
   }
 }
